--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,8 +1,8 @@
-name: Unzip File
+name: Unzip and Commit
 
 on:
-  workflow_dispatch:  # Manual trigger via GitHub Actions UI
-  push:               # Or trigger on push
+  workflow_dispatch:  # Manual trigger
+  push:               # Optional: triggers on any push
 
 jobs:
   unzip:
@@ -12,13 +12,19 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v3
 
-    - name: Unzip the file 
+    - name: Unzip the file
       run: unzip frontend.zip -d unzipped_folder
 
-    - name: Commit unzipped content
+    - name: Configure Git
       run: |
         git config user.name "github-actions"
         git config user.email "github-actions@github.com"
+
+    - name: Commit and push changes
+      env:
+        TOKEN: ${{ secrets.GH_PAT }}
+      run: |
+        git remote set-url origin https://x-access-token:${TOKEN}@github.com/${{ github.repository }}
         git add unzipped_folder
-        git commit -m "Unzipped frontend.zip"
+        git commit -m "Unzipped and committed contents of yourfile.zip" || echo "No changes to commit"
         git push
