--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -22,9 +22,11 @@ jobs:
 
     - name: Commit and push changes
       env:
-        TOKEN: ${{ secrets.GH_PAT }}
+        TOKEN: ${{ secrets.GH_PAT }}  # this must be from Secrets, not Variables
       run: |
+        git config user.name "github-actions"
+        git config user.email "github-actions@github.com"
         git remote set-url origin https://x-access-token:${TOKEN}@github.com/${{ github.repository }}
         git add unzipped_folder
-        git commit -m "Unzipped and committed contents of yourfile.zip" || echo "No changes to commit"
-        git push
+        git commit -m "Unzipped and committed contents of frontend.zip" || echo "No changes to commit"
+        git push origin HEAD:${{ github.ref_name }}
