--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,8 +1,8 @@
 name: Unzip and Commit
 
 on:
-  workflow_dispatch:  # Manual trigger
-  push:               # Optional: triggers on any push
+  workflow_dispatch:
+  push:
 
 jobs:
   unzip:
@@ -11,6 +11,13 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
+
+    - name: Check if frontend.zip exists
+      run: |
+        if [ ! -f frontend.zip ]; then
+          echo "frontend.zip not found"
+          exit 1
+        fi
 
     - name: Unzip the file
       run: unzip frontend.zip -d unzipped_folder
@@ -22,11 +29,9 @@ jobs:
 
     - name: Commit and push changes
       env:
-        TOKEN: ${{ secrets.GH_PAT }}  # this must be from Secrets, not Variables
+        TOKEN: ${{ secrets.GH_PAT }}
       run: |
-        git config user.name "github-actions"
-        git config user.email "github-actions@github.com"
-        git remote set-url origin https://x-access-token:${TOKEN}@github.com/${{ github.repository }} 
+        git remote set-url origin https://x-access-token:${TOKEN}@github.com/${{ github.repository }}
         git add unzipped_folder
-        git commit -m "Unzipped and committed contents of frontend.zip" || echo "No changes to commit"
-        git push origin HEAD:${{ github.ref_name }}
+        git commit -m "Unzipped frontend.zip on $(date)" || echo "No changes to commit"
+        git push origin HEAD:"${{ github.ref_name }}"
