--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -27,11 +27,12 @@ jobs:
         git config user.name "github-actions"
         git config user.email "github-actions@github.com"
 
-    - name: Commit and push changes
+    - name: Commit and push changes to a new branch
       env:
         TOKEN: ${{ secrets.GH_PAT }}
       run: |
-        git remote set-url origin https://x-access-token:${TOKEN}@github.com/${{ github.repository }}
+        git checkout -b feature/unzipped-frontend
         git add unzipped_folder
-        git commit -m "Unzipped frontend.zip on $(date)" || echo "No changes to commit"
-        git push origin HEAD:"${{ github.ref_name }}"
+        git commit -m "Unzipped frontend.zip into feature branch" || echo "No changes to commit"
+        git remote set-url origin https://x-access-token:${TOKEN}@github.com/${{ github.repository }}
+        git push -u origin feature/unzipped-frontend
