--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -9,30 +9,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
-
-    - name: Check if frontend.zip exists
-      run: |
-        if [ ! -f frontend.zip ]; then
-          echo "frontend.zip not found"
-          exit 1
-        fi
-
-    - name: Unzip the file
-      run: unzip frontend.zip -d unzipped_folder
-
-    - name: Configure Git
-      run: |
-        git config user.name "github-actions"
-        git config user.email "github-actions@github.com"
-
-    - name: Commit and push changes to a new branch
+    - name: Commit and push changes to feature branch
       env:
         TOKEN: ${{ secrets.GH_PAT }}
       run: |
         git checkout -b feature/unzipped-frontend
         git add unzipped_folder
-        git commit -m "Unzipped frontend.zip into feature branch" || echo "No changes to commit"
+        git commit -m "Unzipped frontend.zip" || echo "No changes to commit"
         git remote set-url origin https://x-access-token:${TOKEN}@github.com/${{ github.repository }}
         git push -u origin feature/unzipped-frontend
+
