--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -18,9 +18,8 @@ jobs:
     - name: Unzip the file
       run: unzip frontend.zip -d unzipped_folder
 
-    - name: Remove .git metadata from unzipped folder
-      run: |
-        find unzipped_folder -name ".git" -type d -exec rm -rf {} +
+    - name: Remove any .git metadata from unzipped folder
+      run: find unzipped_folder -name ".git" -type d -exec rm -rf {} +
 
     - name: Configure Git
       run: |
@@ -28,13 +27,12 @@ jobs:
         git config user.email "github-actions@github.com"
 
     - name: Commit and push changes to feature branch
-      env:
-        TOKEN: ${{ secrets.GH_PAT }}
       run: |
-        git checkout -b new || git checkout new
+        git fetch origin
+        git checkout -B new origin/new || git checkout -B new
         git add unzipped_folder
         git commit -m "Unzipped frontend.zip into feature branch" || echo "No changes to commit"
-        git remote set-url origin https://x-access-token:${TOKEN}@github.com/${{ github.repository }}
+        git remote set-url origin https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }}
         git push -u origin new
 
     - name: Create Pull Request
